k8s/backend.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: exam
spec:
  selector:
    app: backend
  ports:
  - port: 8080
    targetPort: 8080
      
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: exam
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend-container
          image: noranorab/backend:1.0.1
          ports:
            - name: http
              containerPort: 8080
          # livenessProbe:
          #   exec:
          #     command:
          #     - cat
          #     - classes/application.properties
          #   initialDelaySeconds: 5 #Default 0 
          #   periodSeconds: 10 #Default 10 
          # readinessProbe:
          #   exec:
          #     command:
          #     - cat
          #     - classes/application.properties
          #   initialDelaySeconds: 5 #Default 0 
          #   periodSeconds: 10 #Default 10 
          # resources:
          #   limits:
          #     cpu: "0.2"
          #     memory: "200Mi"
