k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: exam
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: noranorab/frontend:1.0.0
        ports:
        - name: frontend-port
          containerPort: 80
        resources:
          limits:
            cpu: "0.2"
            memory: "200Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: exam
spec:
  selector:
    app: frontend
  ports:
  - port: 8081
    targetPort: 80
